<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingHorizontal="20dp"
    android:paddingTop="20dp">

    <EditText
        android:id="@+id/title_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/title_hint" />

    <EditText
        android:id="@+id/description_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:gravity="start|top"
        android:hint="@string/description_hint"
        android:inputType="textMultiLine" />


    <EditText
        android:id="@+id/price_field"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/price_hint"
        android:inputType="numberDecimal" />

    <Button
        android:id="@+id/sell_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sell_button_text" />

</LinearLayout>